--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js"
   },
-  "author": "Kate Vaskevich",
+  "author": "Kate V",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
